--- a/Spotify Audio Features.ipynb
+++ b/Spotify Audio Features.ipynb
@@ -16,8 +16,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# We need Scikit-learn later - we'll uncomment this later and import specific modules for speed\n",
-    "# import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import linear_model\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt"
@@ -3656,7 +3658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3665,7 +3667,7 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3859,10 +3861,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train, test = train_test_split(data, test_size = 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>key</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>duration_seconds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>YG</td>\n",
+       "      <td>Big Bank feat. 2 Chainz, Big Sean, Nicki Minaj</td>\n",
+       "      <td>0.005820</td>\n",
+       "      <td>0.743</td>\n",
+       "      <td>0.339</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0812</td>\n",
+       "      <td>-7.678</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.4090</td>\n",
+       "      <td>203.927</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>15</td>\n",
+       "      <td>238.373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YG</td>\n",
+       "      <td>BAND DRUM (feat. A$AP Rocky)</td>\n",
+       "      <td>0.024400</td>\n",
+       "      <td>0.846</td>\n",
+       "      <td>0.557</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.2860</td>\n",
+       "      <td>-7.259</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.4570</td>\n",
+       "      <td>159.009</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.371</td>\n",
+       "      <td>0</td>\n",
+       "      <td>214.800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>R3HAB</td>\n",
+       "      <td>Radio Silence</td>\n",
+       "      <td>0.025000</td>\n",
+       "      <td>0.603</td>\n",
+       "      <td>0.723</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0824</td>\n",
+       "      <td>-5.890</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0454</td>\n",
+       "      <td>114.966</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.382</td>\n",
+       "      <td>56</td>\n",
+       "      <td>138.913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chris Cooq</td>\n",
+       "      <td>Lactose</td>\n",
+       "      <td>0.029400</td>\n",
+       "      <td>0.800</td>\n",
+       "      <td>0.579</td>\n",
+       "      <td>0.912</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0994</td>\n",
+       "      <td>-12.118</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0701</td>\n",
+       "      <td>123.003</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.641</td>\n",
+       "      <td>0</td>\n",
+       "      <td>125.381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Chris Cooq</td>\n",
+       "      <td>Same - Original mix</td>\n",
+       "      <td>0.000035</td>\n",
+       "      <td>0.783</td>\n",
+       "      <td>0.792</td>\n",
+       "      <td>0.878</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.0332</td>\n",
+       "      <td>-10.277</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0661</td>\n",
+       "      <td>120.047</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.928</td>\n",
+       "      <td>0</td>\n",
+       "      <td>124.016</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  artist_name                                      track_name  acousticness  \\\n",
+       "0          YG  Big Bank feat. 2 Chainz, Big Sean, Nicki Minaj      0.005820   \n",
+       "1          YG                    BAND DRUM (feat. A$AP Rocky)      0.024400   \n",
+       "2       R3HAB                                   Radio Silence      0.025000   \n",
+       "3  Chris Cooq                                         Lactose      0.029400   \n",
+       "4  Chris Cooq                             Same - Original mix      0.000035   \n",
+       "\n",
+       "   danceability  energy  instrumentalness  key  liveness  loudness  mode  \\\n",
+       "0         0.743   0.339             0.000    1    0.0812    -7.678     1   \n",
+       "1         0.846   0.557             0.000    8    0.2860    -7.259     1   \n",
+       "2         0.603   0.723             0.000    9    0.0824    -5.890     0   \n",
+       "3         0.800   0.579             0.912    5    0.0994   -12.118     0   \n",
+       "4         0.783   0.792             0.878    7    0.0332   -10.277     1   \n",
+       "\n",
+       "   speechiness    tempo  time_signature  valence  popularity  duration_seconds  \n",
+       "0       0.4090  203.927               4    0.118          15           238.373  \n",
+       "1       0.4570  159.009               4    0.371           0           214.800  \n",
+       "2       0.0454  114.966               4    0.382          56           138.913  \n",
+       "3       0.0701  123.003               4    0.641           0           125.381  \n",
+       "4       0.0661  120.047               4    0.928           0           124.016  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regression = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = [\"danceability\", \"acousticness\", \"instrumentalness\", \"key\", \"loudness\", \"speechiness\", \"tempo\", \"valence\", \"duration_seconds\"]\n",
+    "x_train = train[features]\n",
+    "y_train = train[\"popularity\"]\n",
+    "\n",
+    "x_test = test[features]\n",
+    "y_test = test[\"popularity\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regression.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.574928459833874"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = regression.predict(x_test)\n",
+    "mean_absolute_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On average, our model is off by around 15.6% away from the true popularity score. This is not great, but it's a good place to start. We can try other models and see if they work better."
+   ]
   }
  ],
  "metadata": {
