Added Random Forests and KNeighborsRegressor

--- a/Spotify Audio Features.ipynb
+++ b/Spotify Audio Features.ipynb
@@ -19,8 +19,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import linear_model\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
+    "import time\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt"
    ]
@@ -3860,6 +3864,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's perform a train_test_split on our data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -3869,8 +3880,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's calculate the baseline we want to beat. The baseline is the error if we predicted all the popularity values as the average value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline error:  16.45186434319885\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline_pred = np.mean(data['popularity'])\n",
+    "baseline_errors =  abs(test[\"popularity\"] - baseline_pred)\n",
+    "print('Baseline error: ', np.mean(baseline_errors))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to get an error below 16.45. Let's start out with Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -4035,7 +4086,7 @@
        "4       0.0661  120.047               4    0.928           0           124.016  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4046,7 +4097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4055,7 +4106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4069,7 +4120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4079,7 +4130,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4090,16 +4141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15.574928459833874"
+       "15.567960832304449"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4113,7 +4164,187 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On average, our model is off by around 15.6% away from the true popularity score. This is not great, but it's a good place to start. We can try other models and see if they work better."
+    "On average, our model is off by around 15.6 away from the true popularity score. This is a reasonable start. It's better than the baseline, so we've already improved from the baseline approach."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use a Random Forest regressor to predict our values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = np.array(data[[\"danceability\", \"acousticness\", \"instrumentalness\", \"key\", \"loudness\", \"speechiness\", \"tempo\", \"valence\", \"duration_seconds\"]])\n",
+    "predict = np.array(data['popularity'])\n",
+    "x_train, x_test, y_train, y_test = train_test_split(features, predict, test_size = 0.2, random_state = 42)\n",
+    "n_estimators = 100\n",
+    "rf = RandomForestRegressor(n_estimators=100, n_jobs=-1, warm_start=True, random_state=42)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "rf.fit(x_train, y_train);\n",
+    "end_time = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time Elapsed for 100 estimators: 51 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Time Elapsed for %d estimators: %d seconds\" % (n_estimators, (end_time - start_time)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = rf.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.605743545348892"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mean absolute error is around 14.6, which is less than the error for linear regression, so we've made a little improvement here!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-Nearest Neighbors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll try K-Nearest Neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = train_test_split(data, test_size = 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = [\"danceability\", \"acousticness\", \"instrumentalness\", \"key\", \"loudness\", \"speechiness\", \"tempo\", \"valence\", \"duration_seconds\"]\n",
+    "x_train = train[features]\n",
+    "y_train = train[\"popularity\"]\n",
+    "\n",
+    "x_test = test[features]\n",
+    "y_test = test[\"popularity\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsRegressor(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "          metric_params=None, n_jobs=None, n_neighbors=100, p=2,\n",
+       "          weights='uniform')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KNR = KNeighborsRegressor(100)\n",
+    "KNR.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = KNR.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.573053610377682"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It performed similar to Linear Regression, but Random Forest worked better than both. Still, it is better than the baseline approach. Next approach might be Neural Networks..."
    ]
   }
  ],
