--- a/Spotify Audio Features.ipynb
+++ b/Spotify Audio Features.ipynb
@@ -4405,8 +4405,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It performed similar to Linear Regression, but Random Forest worked better than both. Still, it is better than the baseline approach. Next approach might be Neural Networks..."
+    "It performed similar to Linear Regression, but Random Forest worked better than both. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try Gradient Boosting Regressors next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Boosting Regressors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time Elapsed for 100 estimators: 68 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "features = np.array(data[[\"danceability\", \"acousticness\", \"instrumentalness\", \"key\", \"loudness\", \"speechiness\", \"tempo\", \"valence\", \"duration_seconds\"]])\n",
+    "predict = np.array(data['popularity'])\n",
+    "x_train, x_test, y_train, y_test = train_test_split(features, predict, test_size = 0.2, random_state = 42)\n",
+    "n_estimators = 100\n",
+    "gb = GradientBoostingRegressor(n_estimators=500, random_state=42)\n",
+    "start_time = time.time()\n",
+    "gb.fit(x_train, y_train)\n",
+    "end_time = time.time()\n",
+    "print(\"Time Elapsed for %d estimators: %d seconds\" % (n_estimators, (end_time - start_time)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.011679734001161"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred=gb.predict(x_test)\n",
+    "mean_absolute_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
