Added basic Neural Network

--- a/Spotify Audio Features.ipynb
+++ b/Spotify Audio Features.ipynb
@@ -23,6 +23,7 @@
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "\n",
     "import time\n",
     "import seaborn as sns\n",
@@ -4449,16 +4450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15.011679734001161"
+       "14.807974449066545"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4469,11 +4470,318 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Almost as good as random forests. Hopefully we can try Neural Networks next and see if we get better results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A simple Neural Network - Multilayer perceptron"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit learn isn't the best for Deep learning, but it's worth seeing how well it does. If we don't get good results, we can try other libraries adapted for deep learning like PyTorch"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neural_network import MLPRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Chose a larger split ratio because deep learning needs more data.\n",
+    "train, test = train_test_split(data, test_size = 0.04)\n",
+    "features = [\"danceability\", \"acousticness\", \"instrumentalness\", \"key\", \"loudness\", \"speechiness\", \"tempo\", \"valence\", \"duration_seconds\"]\n",
+    "x_train = train[features]\n",
+    "y_train = train[\"popularity\"]\n",
+    "\n",
+    "x_test = test[features]\n",
+    "y_test = test[\"popularity\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1, loss = 222.06203342\n",
+      "Iteration 2, loss = 194.39624173\n",
+      "Iteration 3, loss = 191.21290270\n",
+      "Iteration 4, loss = 188.78225403\n",
+      "Iteration 5, loss = 186.78460238\n",
+      "Iteration 6, loss = 185.07900225\n",
+      "Iteration 7, loss = 183.90088120\n",
+      "Iteration 8, loss = 182.63947144\n",
+      "Iteration 9, loss = 181.60620438\n",
+      "Iteration 10, loss = 180.54128337\n",
+      "Iteration 11, loss = 179.95614435\n",
+      "Iteration 12, loss = 178.95549451\n",
+      "Iteration 13, loss = 178.73125624\n",
+      "Iteration 14, loss = 178.15864118\n",
+      "Iteration 15, loss = 177.88006670\n",
+      "Iteration 16, loss = 177.21884923\n",
+      "Iteration 17, loss = 176.96944608\n",
+      "Iteration 18, loss = 176.83175812\n",
+      "Iteration 19, loss = 176.54979673\n",
+      "Iteration 20, loss = 176.51655857\n",
+      "Iteration 21, loss = 176.00739111\n",
+      "Iteration 22, loss = 176.08374718\n",
+      "Iteration 23, loss = 175.86216690\n",
+      "Iteration 24, loss = 175.73164196\n",
+      "Iteration 25, loss = 175.61842655\n",
+      "Iteration 26, loss = 175.86806593\n",
+      "Iteration 27, loss = 175.68638176\n",
+      "Iteration 28, loss = 175.13413327\n",
+      "Iteration 29, loss = 175.31318681\n",
+      "Iteration 30, loss = 175.13342066\n",
+      "Iteration 31, loss = 175.18054028\n",
+      "Iteration 32, loss = 175.03202821\n",
+      "Iteration 33, loss = 174.90317100\n",
+      "Iteration 34, loss = 174.88323780\n",
+      "Iteration 35, loss = 174.91644814\n",
+      "Iteration 36, loss = 174.94735636\n",
+      "Iteration 37, loss = 174.72589228\n",
+      "Iteration 38, loss = 174.71314786\n",
+      "Iteration 39, loss = 174.61250340\n",
+      "Iteration 40, loss = 174.32645254\n",
+      "Iteration 41, loss = 174.76456970\n",
+      "Iteration 42, loss = 174.29004754\n",
+      "Iteration 43, loss = 174.72167444\n",
+      "Iteration 44, loss = 174.32584073\n",
+      "Iteration 45, loss = 174.26472086\n",
+      "Iteration 46, loss = 174.20977637\n",
+      "Iteration 47, loss = 174.22730894\n",
+      "Iteration 48, loss = 174.09227256\n",
+      "Iteration 49, loss = 174.17784589\n",
+      "Iteration 50, loss = 174.08108021\n",
+      "Iteration 51, loss = 174.26302769\n",
+      "Iteration 52, loss = 174.09202632\n",
+      "Iteration 53, loss = 174.05611891\n",
+      "Iteration 54, loss = 174.00542470\n",
+      "Iteration 55, loss = 174.15493262\n",
+      "Iteration 56, loss = 174.11225545\n",
+      "Iteration 57, loss = 174.23425826\n",
+      "Iteration 58, loss = 173.83293340\n",
+      "Iteration 59, loss = 173.87299917\n",
+      "Iteration 60, loss = 173.94714998\n",
+      "Iteration 61, loss = 173.69648502\n",
+      "Iteration 62, loss = 173.72548086\n",
+      "Iteration 63, loss = 173.51742237\n",
+      "Iteration 64, loss = 173.44534915\n",
+      "Iteration 65, loss = 173.62417965\n",
+      "Iteration 66, loss = 173.45799260\n",
+      "Iteration 67, loss = 173.57571808\n",
+      "Iteration 68, loss = 173.55358869\n",
+      "Iteration 69, loss = 173.46539647\n",
+      "Iteration 70, loss = 173.44256587\n",
+      "Iteration 71, loss = 173.50377860\n",
+      "Iteration 72, loss = 173.41334826\n",
+      "Iteration 73, loss = 173.50272194\n",
+      "Iteration 74, loss = 173.51626497\n",
+      "Iteration 75, loss = 173.34891370\n",
+      "Iteration 76, loss = 173.52593715\n",
+      "Iteration 77, loss = 173.18414645\n",
+      "Iteration 78, loss = 173.10866367\n",
+      "Iteration 79, loss = 173.51022339\n",
+      "Iteration 80, loss = 173.29813556\n",
+      "Iteration 81, loss = 173.29315174\n",
+      "Iteration 82, loss = 173.05399001\n",
+      "Iteration 83, loss = 173.03474086\n",
+      "Iteration 84, loss = 173.09373495\n",
+      "Iteration 85, loss = 173.03650991\n",
+      "Iteration 86, loss = 173.00965812\n",
+      "Iteration 87, loss = 172.96889277\n",
+      "Iteration 88, loss = 173.06944442\n",
+      "Iteration 89, loss = 173.02869142\n",
+      "Iteration 90, loss = 172.97308094\n",
+      "Iteration 91, loss = 173.25390183\n",
+      "Iteration 92, loss = 173.01062150\n",
+      "Iteration 93, loss = 172.97840961\n",
+      "Iteration 94, loss = 172.84434236\n",
+      "Iteration 95, loss = 173.05662790\n",
+      "Iteration 96, loss = 172.99962666\n",
+      "Iteration 97, loss = 172.82200105\n",
+      "Iteration 98, loss = 173.19934594\n",
+      "Iteration 99, loss = 172.96807720\n",
+      "Iteration 100, loss = 172.84985706\n",
+      "Iteration 101, loss = 172.65321961\n",
+      "Iteration 102, loss = 172.70810290\n",
+      "Iteration 103, loss = 172.60012836\n",
+      "Iteration 104, loss = 172.93241591\n",
+      "Iteration 105, loss = 172.53628895\n",
+      "Iteration 106, loss = 172.66625526\n",
+      "Iteration 107, loss = 172.70682021\n",
+      "Iteration 108, loss = 172.57860680\n",
+      "Iteration 109, loss = 172.45924561\n",
+      "Iteration 110, loss = 172.77073049\n",
+      "Iteration 111, loss = 172.55781281\n",
+      "Iteration 112, loss = 172.56346141\n",
+      "Iteration 113, loss = 172.45129079\n",
+      "Iteration 114, loss = 172.64530199\n",
+      "Iteration 115, loss = 172.46437717\n",
+      "Iteration 116, loss = 172.53295051\n",
+      "Iteration 117, loss = 172.46591407\n",
+      "Iteration 118, loss = 172.42577122\n",
+      "Iteration 119, loss = 172.52495060\n",
+      "Iteration 120, loss = 172.24052288\n",
+      "Iteration 121, loss = 172.15169970\n",
+      "Iteration 122, loss = 172.38255869\n",
+      "Iteration 123, loss = 172.22362592\n",
+      "Iteration 124, loss = 172.61445789\n",
+      "Iteration 125, loss = 172.42053339\n",
+      "Iteration 126, loss = 172.46087067\n",
+      "Iteration 127, loss = 172.19880325\n",
+      "Iteration 128, loss = 172.23611875\n",
+      "Iteration 129, loss = 172.19961777\n",
+      "Iteration 130, loss = 172.35518346\n",
+      "Iteration 131, loss = 172.06348999\n",
+      "Iteration 132, loss = 172.03431793\n",
+      "Iteration 133, loss = 172.05073423\n",
+      "Iteration 134, loss = 172.13676622\n",
+      "Iteration 135, loss = 171.98514106\n",
+      "Iteration 136, loss = 172.18477676\n",
+      "Iteration 137, loss = 172.09281265\n",
+      "Iteration 138, loss = 171.82730859\n",
+      "Iteration 139, loss = 171.92923642\n",
+      "Iteration 140, loss = 171.79220575\n",
+      "Iteration 141, loss = 172.22888791\n",
+      "Iteration 142, loss = 172.22398168\n",
+      "Iteration 143, loss = 172.08026713\n",
+      "Iteration 144, loss = 172.29256661\n",
+      "Iteration 145, loss = 171.74225940\n",
+      "Iteration 146, loss = 172.10544768\n",
+      "Iteration 147, loss = 171.86849785\n",
+      "Iteration 148, loss = 172.14132603\n",
+      "Iteration 149, loss = 171.86084700\n",
+      "Iteration 150, loss = 171.72571151\n",
+      "Iteration 151, loss = 171.94514236\n",
+      "Iteration 152, loss = 171.73302539\n",
+      "Iteration 153, loss = 171.82670480\n",
+      "Iteration 154, loss = 171.82265765\n",
+      "Iteration 155, loss = 171.61428104\n",
+      "Iteration 156, loss = 171.92059556\n",
+      "Iteration 157, loss = 171.74999747\n",
+      "Iteration 158, loss = 171.79437338\n",
+      "Iteration 159, loss = 171.62874868\n",
+      "Iteration 160, loss = 171.81019698\n",
+      "Iteration 161, loss = 171.70794693\n",
+      "Iteration 162, loss = 171.70901470\n",
+      "Iteration 163, loss = 171.68269540\n",
+      "Iteration 164, loss = 171.62306859\n",
+      "Iteration 165, loss = 171.82656597\n",
+      "Iteration 166, loss = 171.55282755\n",
+      "Iteration 167, loss = 171.71485721\n",
+      "Iteration 168, loss = 171.89289032\n",
+      "Iteration 169, loss = 171.56657247\n",
+      "Iteration 170, loss = 171.64288265\n",
+      "Iteration 171, loss = 171.74855172\n",
+      "Iteration 172, loss = 171.55612912\n",
+      "Iteration 173, loss = 171.59800917\n",
+      "Iteration 174, loss = 171.73772099\n",
+      "Iteration 175, loss = 171.31912069\n",
+      "Iteration 176, loss = 171.71383873\n",
+      "Iteration 177, loss = 171.41197278\n",
+      "Iteration 178, loss = 171.28236190\n",
+      "Iteration 179, loss = 171.45863950\n",
+      "Iteration 180, loss = 171.17423558\n",
+      "Iteration 181, loss = 171.39179632\n",
+      "Iteration 182, loss = 171.44436036\n",
+      "Iteration 183, loss = 171.43658331\n",
+      "Iteration 184, loss = 171.36811185\n",
+      "Iteration 185, loss = 171.19539723\n",
+      "Iteration 186, loss = 171.25054903\n",
+      "Iteration 187, loss = 171.26187913\n",
+      "Iteration 188, loss = 171.45257580\n",
+      "Iteration 189, loss = 171.44688974\n",
+      "Iteration 190, loss = 171.49144704\n",
+      "Iteration 191, loss = 171.46162725\n",
+      "Training loss did not improve more than tol=0.000100 for 10 consecutive epochs. Stopping.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MLPRegressor(activation='relu', alpha=0.001, batch_size='auto', beta_1=0.9,\n",
+       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=30, learning_rate='adaptive',\n",
+       "       learning_rate_init=0.001, max_iter=50000, momentum=0.9,\n",
+       "       n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
+       "       random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
+       "       validation_fraction=0.1, verbose='True', warm_start=False)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "nn = MLPRegressor(activation='relu', alpha=0.001, batch_size='auto', beta_1=0.9,\n",
+    "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+    "           hidden_layer_sizes=(30), learning_rate='adaptive',\n",
+    "       learning_rate_init=0.001, max_iter=50000, momentum=0.9,\n",
+    "       n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
+    "       random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
+    "       validation_fraction=0.1, verbose='True', warm_start=False)\n",
+    "nn.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = nn.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.046525353267535"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Performed okay, but random forests performed better still. Maybe tuning some parameters might help, we'll hav"
+   ]
   }
  ],
  "metadata": {
